# nastya-lisp

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt
src/Builtins/: BuiltinsBuilder.cpp  BuiltinsBuilder.hpp  BuiltinsException.hpp  BuiltinsModuleBuilder.cpp  BuiltinsModuleBuilder.hpp  BuiltinsModuleBuilderTest.cpp  BuiltinsModulesFactory.cpp  BuiltinsModulesFactory.hpp  CMakeLists.txt
src/Builtins/Arithmetic/: ArithmeticEvaluators.cpp  ArithmeticEvaluators.hpp  ArithmeticModule.cpp  ArithmeticModule.hpp
src/Builtins/Compare/: CompareEvaluators.cpp  CompareEvaluators.hpp  CompareModule.cpp  CompareModule.hpp
src/Builtins/Interface/: IBuiltinsModuleFactory.hpp
src/Builtins/Lists/: ListsEvaluators.cpp  ListsEvaluators.hpp  ListsModule.cpp  ListsModule.hpp  ListsModuleTest.cpp
src/Builtins/Syntax/: SyntaxEvaluators.cpp  SyntaxEvaluators.hpp  SyntaxModule.cpp  SyntaxModule.hpp
src/CLI/: CMakeLists.txt  ConsoleManager.cpp  ConsoleManager.hpp  PreloadFromFile.cpp  PreloadFromFile.hpp  main.cpp
src/CLI/IO/: InputStream.cpp  InputStream.hpp  OutputStream.cpp  OutputStream.hpp  StreamWrapperFactory.cpp  StreamWrapperFactory.hpp
src/CLI/Interface/: IConsoleManager.hpp  IInputSource.hpp  IIoFactory.hpp  IOutputSink.hpp  ISplashScreen.hpp
src/CLI/Module/: ConsoleEvaluators.cpp  ConsoleEvaluators.hpp  ConsoleModule.cpp  ConsoleModule.hpp  ConsoleModuleBuilder.cpp  ConsoleModuleBuilder.hpp  ConsoleModuleBuilderCreator.hpp  ConsoleModuleRegistration.cpp  ConsoleModuleRegistration.hpp  ShutdownEvent.hpp
src/CLI/SplashScreen/: SplashScreen.cpp  SplashScreen.hpp
src/CLI/Testing/: ConsoleManagerMock.hpp  InputSourceMock.hpp  IoFactoryMock.hpp  OutputSinkMock.hpp  SplashScreenMock.hpp
src/ExecutorEnvironment/: CMakeLists.txt  Machine.cpp  Machine.hpp
src/LispExpression/: CMakeLists.txt  LispExpressionBuilder.cpp  LispExpressionBuilder.hpp  LispExpressionException.hpp  ObjectFactory.cpp  ObjectFactory.hpp  ObjectFactoryBuilder.cpp  ObjectFactoryBuilder.hpp  ObjectFactoryBuilderTest.cpp  ObjectStorage.cpp  ObjectStorage.hpp  ObjectStorageTest.cpp
src/LispExpression/Interface/: IExpressionBuilder.hpp  IObject.hpp  IObjectFactory.hpp  IObjectStorage.hpp
src/LispExpression/Testing/: ExpressionBuilderMock.hpp  ListBuilder.cpp  ListBuilder.hpp
src/LispExpression/TypeSystem/: BooleanObject.hpp  ComparableTrait.hpp  EqualTrait.hpp  GenericObject.hpp  LabelObject.hpp  LambdaObject.hpp  ListObject.hpp  NumberObject.hpp  ObjectType.hpp  StringObject.hpp  TypeSystemImpl.cpp  TypeSystemImplTest.cpp
src/Modules/: AbstractModule.cpp  AbstractModule.hpp  CMakeLists.txt  Module.cpp  Module.hpp  ModuleBuilder.hpp  ModuleException.hpp  ModuleRegistry.cpp  ModuleRegistry.hpp  ModuleRegistryTest.cpp  ModuleTest.cpp
src/Modules/Interface/: IModule.hpp  IModuleBuilder.hpp  IModuleRegistry.hpp
src/Modules/Testing/: ModuleMock.hpp  ModuleRegistryMock.hpp
src/NewTests/: CMakeLists.txt
src/NewTests/Modules/: ModuleRegistryTest.cpp
src/Parser/: CMakeLists.txt  DummyParser.cpp  DummyParser.hpp  DummyParserTest.cpp  LispExpressionBuilder.cpp  LispExpressionBuilder.hpp  LispExpressionException.hpp  ObjectFactory.cpp  ObjectFactory.hpp  ObjectFactoryBuilder.cpp  ObjectFactoryBuilder.hpp  Parser.cpp  Parser.hpp  ParserException.hpp  TokenImpl.cpp  Tokenizer.cpp  Tokenizer.hpp
src/Parser/Interface/: IExpressionBuilder.hpp  IObjectFactory.hpp  IParser.hpp  ITokenProvider.hpp  IValidator.hpp
src/Parser/Internal/: ParserImpl.cpp  ParserImpl.hpp
src/Parser/SimpleTokenizers/: AtomValidator.cpp  AtomValidator.hpp  BooleanValidator.cpp  BooleanValidator.hpp  CompositeValidator.cpp  CompositeValidator.hpp  LabelValidator.cpp  LabelValidator.hpp  NumberValidator.cpp  NumberValidator.hpp  OmitBlanksValidator.cpp  OmitBlanksValidator.hpp  ReservedCharacterValidator.cpp  ReservedCharacterValidator.hpp  StringValidator.cpp  StringValidator.hpp
src/Parser/Testing/: ExpressionBuilderMock.hpp  ListBuilder.cpp  ListBuilder.hpp  ParserMock.hpp
src/Parser/TokenProviders/: AtomicValueTokenProvider.cpp  AtomicValueTokenProvider.hpp  BooleanTokenProvider.cpp  BooleanTokenProvider.hpp  LabelTokenProvider.cpp  LabelTokenProvider.hpp  NumberTokenProvider.cpp  NumberTokenProvider.hpp  OmitBlanks.cpp  OmitBlanks.hpp  ReservedCharacterTokenProvider.cpp  ReservedCharacterTokenProvider.hpp  StringTokenProvider.cpp  StringTokenProvider.hpp  TokenProvidersAggregator.cpp  TokenProvidersAggregator.hpp
src/Parser/Types/: Token.hpp
src/Runtime/: CMakeLists.txt  GenericEvaluator.cpp  GenericEvaluator.hpp  GenericEvaluatorFactory.hpp
src/Runtime/Interface/: IEvaluator.hpp  IEvaluatorFactory.hpp  IMachine.hpp  IMemory.hpp  IRuntimeEnvironment.hpp
src/Runtime/Testing/: MachineMock.hpp  MemoryMock.hpp
src/Tests/: AbstractMachineTest.cpp  BuiltinsModuleBuilderTest.cpp  CMakeLists.txt  CompareModuleTest.cpp  ConsoleManagerTest.cpp  ConsoleModuleTest.cpp  DummyParserTest.cpp  ExecutorEnvironmentTest.cpp  IoStreamTest.cpp  LispExpressionBuilderTest.cpp  ListsModuleTest.cpp  ModuleRegistryTest.cpp  ModuleTest.cpp  ObjectFactoryBuilderTest.cpp  ObjectFactoryTest.cpp  ObjectStorageTest.cpp  SplashScreenTest.cpp  SyntaxModuleTest.cpp  TypeSystemImplTest.cpp
src/Tests/Builtins/: ArithmeticModuleTest.cpp  BuiltinsBuilderTest.cpp  BuiltinsModulesFactoryTest.cpp  CompareModuleTest.cpp  ListsModuleTest.cpp  SyntaxModuleTest.cpp
src/Tests/CLI/: ConsoleManagerTest.cpp  ConsoleModuleTest.cpp  IoStreamTest.cpp  (+1 more)
src/Tokenizer/: CMakeLists.txt  TokenImpl.cpp  Tokenizer.cpp  Tokenizer.hpp  TokenizerException.hpp
src/TypeSystem/: CMakeLists.txt  ObjectStorage.cpp  ObjectStorage.hpp  ObjectStorageException.hpp  TypeSystemImpl.cpp
src/Utilities/: CMakeLists.txt  LispCast.cpp  LispCast.hpp  LispCastException.hpp  ListBuilder.cpp  ListBuilder.hpp
src/VirtualMachine/: ArgumentPreparationManager.cpp  ArgumentPreparationManager.hpp  CMakeLists.txt  CallWrapper.cpp  CallWrapper.hpp  LambdaCallEvaluator.cpp  LambdaCallEvaluator.hpp  Machine.cpp  Machine.hpp  MachineRuntimeException.hpp
(+105 files in other folders)
