include_directories(${CMAKE_CURRENT_SOURCE_DIR})

find_package(GTest REQUIRED CONFIG)
set(TESTING_FRAMEWORK GTest::gtest GTest::gmock GTest::gtest_main)

add_subdirectory(Tokenizer)
add_subdirectory(TypeSystem)
add_subdirectory(Parser)
add_subdirectory(Utilities)
add_subdirectory(Modules)
add_subdirectory(Runtime)
add_subdirectory(Builtins)
add_subdirectory(VirtualMachine)
add_subdirectory(CLI)
add_subdirectory(Tests)
add_subdirectory(NewTests)
